<resources>
    <string name="app_name">Streaming\nX</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Developed by Netanel Amar</string>
    <string name="nav_header_subtitle" translatable="false">Netanel6@windowslive.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_sport_5" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="sport_5">Sport5</string>
    <string name="sport">Sport</string>
    <string name="winner">Winner</string>
    <string name="one" translatable="false">One</string>
    <string name="live_games" translatable="false">Live Games</string>
    <string name="pais">Pais</string>
    <string name="news">News</string>
    <string name="mako">Mako</string>
    <string name="maariv">Maariv</string>
    <string name="ynet" translatable="false">Ynet</string>
    <string name="walla">Walla</string>
    <string name="twenty_news">20 News</string>
    <string name="channel_12">Channel 12</string>
    <string name="channel_13">Channel 13</string>
    <string name="channel_20">Channel 20</string>
    <string name="streaming">Streaming</string>
    <string name="home">Home</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="channel_11">"Channel 11 "</string>
    <string name="instructions">To start navigating between websites\npress the upper left button</string>
</resources>